internal/cve5/testdata/cve/TestToReport/CVE-2024-33522.txtar
Copyright 2024 The Go Authors. All rights reserved.
Use of this source code is governed by a BSD-style
license that can be found in the LICENSE file.

Expected output of TestToReport/CVE-2024-33522.

-- CVE-2024-33522 --
id: GO-ID-PENDING
modules:
    - module: github.com/projectcalico/calico
      non_go_versions:
        - fixed: 19.3.0
      vulnerable_at: 2.6.12+incompatible
    - module: github.com/projectcalico/calico
      non_go_versions:
        - fixed: 3.26.5
        - introduced: 3.27.0
          fixed: 3.27.3
      unsupported_versions:
        - version: 'unaffected at v3.28.0 (default: unaffected)'
          type: cve_version_range
      vulnerable_at: 2.6.12+incompatible
    - module: github.com/projectcalico/calico
      versions:
        - fixed: 3.17.4+incompatible
        - introduced: 3.18.0+incompatible
          fixed: 3.18.2+incompatible
        - introduced: 3.19.0-1.0
          fixed: 3.19.0-2.0
summary: Privilege escalation in Calico CNI install binary in github.com/projectcalico/calico
description: |-
    In vulnerable versions of Calico (v3.27.2 and below), Calico Enterprise
    (v3.19.0-1, v3.18.1, v3.17.3 and below), and Calico Cloud (v19.2.0 and below),
    an attacker who has local access to the Kubernetes node, can escalate their
    privileges by exploiting a vulnerability in the Calico CNI install binary. The
    issue arises from an incorrect SUID (Set User ID) bit configuration in the
    binary, combined with the ability to control the input binary, allowing an
    attacker to execute an arbitrary binary with elevated privileges.
cves:
    - CVE-2024-33522
credits:
    - 'Christopher Alonso (Github: @latortuga71)'
    - Anthony Tam
    - Behnam Shobiri
    - Pedro Coutinho
    - Matt Dupre
references:
    - advisory: https://nvd.nist.gov/vuln/detail/CVE-2024-33522
    - fix: https://github.com/projectcalico/calico/pull/8447
    - fix: https://github.com/projectcalico/calico/pull/8517
    - report: https://github.com/projectcalico/calico/issues/7981
    - web: https://www.tigera.io/security-bulletins-tta-2024-001/
notes:
    - fix: 'module merge error: could not merge versions of module github.com/projectcalico/calico: introduced and fixed versions must alternate'
    - fix: 'github.com/projectcalico/calico: could not add vulnerable_at: 2 versions do not exist: 3.19.0-1.0, 3.19.0-2.0'
    - lint: 'modules[2] "github.com/projectcalico/calico": 2 versions do not exist: 3.19.0-1.0, 3.19.0-2.0'
source:
    id: CVE-2024-33522
    created: 1999-01-01T00:00:00Z
review_status: UNREVIEWED
